munin (work)

  * Allow floating point values in warning/critical limits.
  * Bugfix in munin-html, when using groups/host names with more than one dot.
  * Updated RPM package creation with regards to the 1.2 series.
  * Created RPM package creation for SuSE with regards to the 1.2 series.
  * Added --stdout-option to all programs.

munin (1.1.6)

  * Failsafe entry for @@PYTHON@@.
  * Bugfix in munin-limits (it didn't work properly).
  * Added separate makefile target to take care of SNMP-only items.

munin (1.1.5)

  - Munin main package:
    * Treat long field names properly. Sadly, this will lead to data loss
      for fields that earlier had their field names truncated. :-(
    * Small interface improvements in the HTML output.
    * Changes of min and max values now causes corresponding changes in 
      the RRD files.
    * Added new option "graph_sums" which creates summarised graphs.
    * Munin-update adapts to field type changes (loss-free conversion from
      COUNTER->DERIVE et al.)
    * Added new config option "local_address", to specify which local address
      outgoing connections (from munin-update) should be used.
    * Added "comparison" views, to view a whole hostgroup at once.
    * Bugfix in munin-limits.
    * Draw min/max ranges in all graphs with only one visible field.
    * Replaced notification system. Munin can now send warning/critical
      messages to whatever process/file that is needed.
    * Removed the munin-nagios program, as it is no longer needed.
    * Use column headers for min/max/cur/avg if label is too long.
    * Minor template modifications, so the output HTML validates correctly
      (SF#1039850).
    * Added new field option "line", which draws HRULEs.
	

  - Munin-node:
    * The node now changes dir to /, to make sure it's in a directory
      readable by all users.
    * Added per-plugin timeouts, contributed by Chan Wilson (SF#881044).

  - Plugins